feat(genre): add new feature genre
