# src/main/java/com/tunhan/micsu/dto/response/SongResponse.java
@@ -1,5 +1,6 @@
 package com.tunhan.micsu.dto.response;
 
+import com.tunhan.micsu.entity.enums.GenreName;
 import com.tunhan.micsu.entity.enums.Visibility;
 import lombok.*;
 
@@ -19,6 +20,9 @@ public class SongResponse {
     private Long viewCount;
     private Long repostCount;
     private Visibility visibility;
+    private String genreId;
+    private GenreName genreName;
+    private String genreImage;
     private String uploadedBy;
     private String uploaderUsername;
     private String uploaderAvatarUrl;
